tests/invalid/simple/SetDefine_CompileFail_2.whiley
define 32 as THIRTYTWO
define 12 as TWELVE

define { THIRTYTWO, TWELV } as numbers
